# scipion-em-appion

./: .gitignore  CHANGES.txt  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish_and_tag.yml
appion/: __init__.py  bibtex.py  constants.py  plugin.py  protocols.conf  wizards.py
appion/convert/: __init__.py  convert.py  dataimport.py
appion/protocols/: __init__.py  protocol_dogpicker.py
